[package]
name = "orgdt"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "Emacs' org-mode date/time parser and renderer"
homepage = "https://github.com/adaszko/orgdt"
keywords = ["parser", "nom", "org-mode", "emacs"]

[dependencies]
chrono = "0.4"
nom = "7.1.0"
thiserror = "1.0.30"
